# AI-LLM

./: README.md
Development/: README.md  agent_build_template.md  ai_agent_learning_guide.md
Development/local-llm-agents/: README.md  config.json
Development/local-llm-agents/api/: main.py
Development/local-llm-agents/cli/: deepseacli.py
Development/local-llm-agents/dashboard/: collections.html
Development/local-llm-agents/data/: creatures.json  specimens.json  zones.json
Development/reference/: agents_knowledge_base.md  cli.md  collections_map.md  creatures_dashboard.md  example_async_chat.md
Production/: README.md  computer_status_check_workflow.md
Production/Agentic_Tools_Dashboard/: README.md
Production/Agentic_Tools_Dashboard/Agentic_Tools_Dashboard/: README.md  config.json  pyproject.toml
Production/Agentic_Tools_Dashboard/Agentic_Tools_Dashboard/agent/: agent.py
Production/Agentic_Tools_Dashboard/Agentic_Tools_Dashboard/api/: main.py
Production/Agentic_Tools_Dashboard/Agentic_Tools_Dashboard/dashboard/: index.html
Production/Agentic_Tools_Dashboard/Agentic_Tools_Dashboard/shared/: config.py  data.py
Production/Okta_MCP_Dashboard/: README.md  okta-dashboard-example-queries.md  oktaMCP-dashboard-Launch.sh  postinstall.sh  requirements.txt
Production/code_review_subagent/: README.md  package.json
Production/computer_status_check_agent/: README.md  __init__.py  agent.py  env.example.md  issue_parser.py  jamf_tools.py  linear_tools.py  parse_tool.py  pyproject.toml  system_prompt.txt  user_tools.py
Production/okta_intelligence/: README.md
local-llm-agents/: README.md  pyproject.toml
local-llm-agents/agents/: async_agent.py  fs_agent.py
local-llm-agents/api/: main.py
local-llm-agents/dashboard/: creatures.html  expeditions.html  index.html
local-llm-agents/data/: creatures.json  expeditions.json  relationships.json
reference/: README.md  agent_anatomy.html  creatures_dashboard.md  example_async_chat.md  example_chat.md  expeditions_dashboard.md  knowledge_base.md
(+62 files in other folders)
