[project]
name = "agentic-tools-dashboard"
version = "1.0.0"
description = "Interactive dashboard and LLM agent for Agentic Tools data"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "openai>=1.30.0",
  "python-multipart>=0.0.9",
]

[project.scripts]
serve   = "api.main:app"
agent   = "agent.agent:repl"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "api", "shared"]